--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,7 +45,7 @@ nav ul li a:hover{
 
 
 
-article{
+main article{
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 100px;
@@ -92,4 +92,89 @@ footer{
     width: 300px;
     height: 200px;
     border:2px solid #000000;
+}
+
+
+.controles{
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    font-style: italic;
+    border-radius: 15px;
+    resize: none;
+    margin-top: 10px;
+}
+
+.camposRadio{
+    font-size: 25px;
+    font-style: italic;
+    border-radius: 15px;
+}
+
+.boton{
+    font-size:20px;
+    background-color: #000000;
+    color: #ffffff;
+    width: 150px;
+    height: 50px;
+    border-radius: 15px;
+    margin-top: 5px;
+}
+
+.boton:hover{
+    background-color: #ffffff;
+    color: #000000;
+}
+
+
+
+@media screen and (max-width:650px){
+
+    header{
+        padding-left: 0;
+    }
+
+    header img{
+        width: 250px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    nav{
+        text-align: center;
+        padding-left: 0;
+    }
+
+    nav ul li a{
+        font-size: 15px;
+    }
+
+    main article h1{
+        font-size: 34px;
+    }
+
+    main article h2{
+        font-size: 26px;
+    }
+
+    main article p{
+        font-size: 20px;
+    }
+
+    main article{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    footer{
+        font-size: 20px;
+    }
+
+    .mis_imagenes{
+        width: 100%;
+        height: 100%;
+        margin-bottom: 10px;
+    }
+
 }
